--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.16.0",
     "lucide-react": "^0.469.0",
     "next": "^14.2.22",
+    "next-intl": "^3.26.3",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^17.5.0"
